# GetAction-Chrome-Ext

./: .gitignore  KALSHI_SPORTSBOOK_KNOWLEDGE.md  Optic_Odds_Lesson.md  README.md
.claude/agent-memory/kalshi-web-researcher/: MEMORY.md  kalshi_dom_patterns.md  kalshi_portfolio_patterns.md  kalshi_positions_patterns.md  kalshi_url_and_ticker_patterns.md  project_kalshi_extension.md
.claude/agents/: cache-rate-optimizer.md  kalshi-fair-value-overlay.md  kalshi-fairvalue-backend.md  kalshi-web-researcher.md  optic-odds-api-researcher.md  sports-market-test-validator.md  trading-tool-gtm-strategist.md
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: config.py  edge.py  fair_value.py  logging.py  main.py
backend/app/api/: fair_value.py  health.py  resolve_event.py
backend/app/mapping/: kalshi_parser.py  ticker_lookup.py
backend/app/odds/: cache.py  optic_client.py  stream.py
backend/app/schemas/: request.py  response.py
backend/scripts/: compare_rest_vs_stream.py  probe_optic.py
backend/tests/: test_config_per_league.py  test_edge.py  test_fair_value.py  test_kalshi_parser.py  test_optic_batching.py  test_team_matches.py  test_ticker_lookup.py  test_ticker_lookup_prefix.py
docs/: kalshi_portfolio_research.md  kalshi_positions_research.md  kalshi_web_research.md
extension/: manifest.json
extension/src/background/: service-worker.js
extension/src/content/: content.js
extension/src/popup/: popup.html  popup.js
infra/: deploy-notes.md  docker-compose.yml
